added header with css

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <title>Los Angeles</title>
   </head>
   <body>
-    <h1>Welcome to the City of Angels</h1>
-    <footer>
-      This project coded by Lindsay Land and is open-sourced on
-      <a href="https://github.com/lindsayjane35/Los-Angeles" target="_blank"
-        >GitHub</a
-      >.
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to the City of Angels</h1>
+        <h2>Los Angeles, California</h2>
+        <a href="#more">LEARN MORE</a>
+      </header>
+      <footer>
+        This project coded by Lindsay Land and is open-sourced on
+        <a href="https://github.com/lindsayjane35/Los-Angeles" target="_blank"
+          >GitHub</a
+        >.
+      </footer>
+    </div>
   </body>
 </html>
