--- a/index.html
+++ b/index.html
@@ -14,11 +14,48 @@
         <h2>Los Angeles, California</h2>
         <a href="#more">LEARN MORE</a>
       </header>
+
       <footer>
-        This project coded by Lindsay Land and is open-sourced on
-        <a href="https://github.com/lindsayjane35/Los-Angeles" target="_blank"
-          >GitHub</a
-        >.
+        <section class="grid">
+          <div>
+            <h4>More about LA</h4>
+            <ul>
+              <li><a href="https://www.flylax.com/" target="_blank">LAX</a></li>
+              <li>
+                <a href="//maps.app.goo.gl/QWRBcDtsxNLBc6tX7" target="_blank"
+                  >Map of LA</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.metro.net/riding/guide/system-maps/"
+                  target="_blank"
+                  >LA Metro</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4>About me</h4>
+            <p>
+              My name is Lindsay Land and have called LA home my whole life.
+            </p>
+          </div>
+          <div>
+            <h4>About this website</h4>
+            <p>
+              I created this website as part of a project for SheCodes to
+              develop my coding skills.
+              <br />
+              This project coded by Lindsay Land and is open-sourced on
+              <a
+                href="https://github.com/lindsayjane35/Los-Angeles"
+                target="_blank"
+                >GitHub</a
+              >.
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
