changed photos, html & css minor changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               I created this website as part of a project for SheCodes to
               develop my coding skills.
               <br />
-              This project coded by Lindsay Land and is open-sourced on
+              Coded by Lindsay Land and open-sourced on
               <a
                 href="https://github.com/lindsayjane35/Los-Angeles"
                 target="_blank"
