added main section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
         <h2>Los Angeles, California</h2>
         <a href="#more">LEARN MORE</a>
       </header>
-
+      <main>
+        <section class="grid">
+          <div>
+            <img src="src/santa-monica.jpg" alt="santa monica" />
+          </div>
+          <div>
+            <h2>Why LA?</h2>
+            <p>
+              Los Angeles is a trend-setting global metropolis with a
+              fascinating history and a rich cultural heritage. LA's cultural
+              attractions are second to none, whether it’s the Space Shuttle
+              Endeavour, Walt Disney Concert Hall, the Getty Center or art
+              galleries and urban art. From Transformers: The Ride-3D to
+              legendary studios, thriving nightlife and renowned theatre
+              productions, LA is truly the entertainment capital of the world.
+              LA dining is acclaimed for Michelin-starred restaurants and
+              multicultural neighborhoods alike. Sports fans know that LA is the
+              city of champions, while active Angelenos can explore 75 miles of
+              coastline and hundreds of miles of bike and hiking trails. Shop
+              for everything from couture to vintage, or relax in one of LA’s
+              world class spas. It's no wonder Los Angeles is a top choice for
+              people from all over the world when deciding where to travel. From
+              parks to beaches, museums to tours of Hollywood and much more,
+              there are always things to do in the Los Angeles area. </br>source:
+              Discover Los Angeles
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
         <section class="grid">
           <div>
@@ -38,7 +66,7 @@
           <div>
             <h4>About me</h4>
             <p>
-              My name is Lindsay Land and have called LA home my whole life.
+              My name is Lindsay Land and I have called LA home my whole life.
             </p>
           </div>
           <div>
