added second main section with 3 cards

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <div class="container">
       <header>
-        <h3>.TRAVEL.</h3>
+        <h3>TRAVEL</h3>
         <h1>Welcome to the City of Angels</h1>
         <h2>Los Angeles, California</h2>
         <a href="#more">LEARN MORE</a>
       </header>
       <main>
-        <section class="grid">
+        <section class="grid why-la">
           <div>
             <img src="src/santa-monica.jpg" alt="santa monica" />
           </div>
@@ -37,9 +37,63 @@
               world class spas. It's no wonder Los Angeles is a top choice for
               people from all over the world when deciding where to travel. From
               parks to beaches, museums to tours of Hollywood and much more,
-              there are always things to do in the Los Angeles area. </br>source:
-              Discover Los Angeles
+              there are always things to do in the Los Angeles area.
+              <br />source: Discover Los Angeles
             </p>
+          </div>
+        </section>
+        <section class="second">
+          <h2 class="la-spots">LA Hot Spots</h2>
+          <div class="grid hot-spots">
+            <div class="card">
+              <img src="src/last-bookstore.jpg" alt="the last bookstore" />
+              <h4>The Last Bookstore</h4>
+              <h5>Address:</h5>
+              <p>453 S Spring St, Los Angeles, CA 90013</p>
+              <h5>What I like about it</h5>
+              <p>
+                "We're not really the last bookstore - thank goodness - but we
+                are the largest new and used bookstore in California. Plus,
+                we're the only one that's 22,000 sq. feet with a record store,
+                comic book store, 5 art studios, an epic yarn shop, a famous
+                book tunnel, a mammoth head, and unexpected nooks of funkiness.
+                Also we are in a hundred-year-old bank building, so we have
+                vaults and ghosts."
+              </p>
+              <a href="https://www.lastbookstorela.com/" class="btn"
+                >LEARN MORE</a
+              >
+            </div>
+            <div class="card">
+              <img src="src/last-bookstore.jpg" alt="the last bookstore" />
+              <h4>The Last Bookstore</h4>
+              <h5>Address:</h5>
+              <p>453 S Spring St, Los Angeles, CA 90013</p>
+              <h5>What I like about it</h5>
+              <p>
+                "We're not really the last bookstore - thank goodness - but we
+                are the largest new and used bookstore in California. Plus,
+                we're the only one that's 22,000 sq. feet with a record store,
+                comic book store, 5 art studios, an epic yarn shop, a famous
+                book tunnel, a mammoth head, and unexpected nooks of funkiness.
+                Also we are in a hundred-year-old bank building, so we have
+                vaults and ghosts."
+              </p>
+              <a href="https://www.lastbookstorela.com/" class="btn"
+                >LEARN MORE</a
+              >
+            </div>
+            <div class="card">
+              <img src="src/malibu.jpg" alt="zuma beach" />
+              <h4>Zuma Beach</h4>
+              <h5>Address:</h5>
+              <p>30000 Pacific Coast Hwy, Malibu, CA 90265</p>
+              <h5>What I like about it</h5>
+              <p></p>
+              <a href="https://beaches.lacounty.gov/zuma-beach/" class="btn"
+                >LEARN MORE</a
+              >
+            </div>
           </div>
         </section>
       </main>
