updated 2nd section

--- a/index.html
+++ b/index.html
@@ -76,32 +76,71 @@
               >
             </div>
             <div class="card">
-              <img src="src/last-bookstore.jpg" alt="the last bookstore" />
-              <h4>The Last Bookstore</h4>
+              <div class="card-header">
+                <img
+                  src="src/grand-central-market.jpg"
+                  target="_blank"
+                  alt="grand central market"
+                />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.7268811329727!2d-118.25163012482307!3d34.05087641780337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c64b8e4372e7%3A0x489d4efdeb06d3d8!2sGrand%20Central%20Market!5e0!3m2!1sen!2sus!4v1711426851206!5m2!1sen!2sus"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+
+              <h4>Grand Central Market</h4>
               <h5>Address:</h5>
-              <p>453 S Spring St, Los Angeles, CA 90013</p>
+              <p>317 South Broadway Los Angeles, California 90013</p>
               <h5>What I like about it</h5>
               <p>
-                "We're not really the last bookstore - thank goodness - but we
-                are the largest new and used bookstore in California. Plus,
-                we're the only one that's 22,000 sq. feet with a record store,
-                comic book store, 5 art studios, an epic yarn shop, a famous
-                book tunnel, a mammoth head, and unexpected nooks of funkiness.
-                Also we are in a hundred-year-old bank building, so we have
-                vaults and ghosts."
+                "Grand Central Market provides Los Angeles with a
+                national-caliber eating experience that showcases California’s
+                best ingredients, chefs, and entrepreneurs. Our 30,000
+                square-foot arcade encompasses a food emporium and retail
+                marketplace and will continue to grow by offering downtown a
+                shared gathering place and a dynamic hub for public programming
+                and events."
               </p>
-              <a href="https://www.lastbookstorela.com/" class="btn"
+              <a
+                href="https://grandcentralmarket.com//"
+                target="_blank"
+                class="btn"
                 >LEARN MORE</a
               >
             </div>
             <div class="card">
-              <img src="src/malibu.jpg" alt="zuma beach" />
+              <div class="card-header">
+                <img src="src/malibu.jpg" alt="zuma beach" />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6614.070969674625!2d-118.8302607417504!3d34.0173000906807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e81812ce6a4277%3A0x51028101e983b3af!2sZuma%20Beach!5e0!3m2!1sen!2sus!4v1711426225414!5m2!1sen!2sus"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
               <h4>Zuma Beach</h4>
               <h5>Address:</h5>
               <p>30000 Pacific Coast Hwy, Malibu, CA 90265</p>
               <h5>What I like about it</h5>
-              <p></p>
-              <a href="https://beaches.lacounty.gov/zuma-beach/" class="btn"
+              <p>
+                "Zuma is the ultimate Southern California beach: wide, extends
+                for miles. Zuma Beach has 1.8 miles of beach frontage with 105
+                acres of property. There are eight parking lots with
+                approximately 2,000 parking spaces. Food stands are located at
+                each end of the beach. Other amenities include restrooms,
+                restaurants, showers, volleyball nets, and a bus stop. Beach
+                wheelchairs are also available."
+              </p>
+              <a
+                href="https://beaches.lacounty.gov/zuma-beach/"
+                target="_blank"
+                class="btn"
                 >LEARN MORE</a
               >
             </div>
